kubernates/kubernetes.postgres-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-db
  namespace: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-db
  template:
    metadata:
      labels:
        app: auth-db
    spec:
      containers:
        - name: postgresql-db
          imagePullPolicy: "IfNotPresent"
          image: postgres:9.6
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: auth-db-service
  namespace: auth
spec:
  selector:
    app: auth-db
  ports:
    - port: 5432
      protocol: "TCP"
      targetPort: 5432
